fixed project spacing

--- a/css/style.css
+++ b/css/style.css
@@ -151,14 +151,17 @@ main {
 
 /* Projects */
 .projects-container {
+  --project-gap: 3rem;
   display: flex;
-  gap: 3rem;
+  flex-wrap: wrap;
+  gap: var(--project-gap);
+  row-gap: 5rem;
 }
 
 .project {
   display: flex;
   flex-direction: column;
-  flex-basis: 33.3333%;
+  flex-basis: calc((100% - var(--project-gap) * 2) / 3);
 }
 
 .project--tools {
@@ -174,6 +177,21 @@ main {
 .project--image {
   min-width: 0;
   width: 100%;
+  border-radius: 5px;
+  margin-top: .5rem;
+}
+
+.project--title_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.project--title {
+  margin-block: .5rem;
+}
+.project--description {
+  margin: 0;
+  margin-bottom: 2rem;
 }
 
 .project--links {
@@ -182,4 +200,9 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: auto;
+}
+
+.project--link_icon {
+  fill: var(--off-color);
 }
